@@ -3,9 +3,10 @@ This file shows the changes in recent releases of MODx. The most current release
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
 
-MOD 0.9.5 beta 3 (rev 1540 - September 28, 2006)
+MOD 0.9.5 beta 4 (rev 1549 - September 28, 2006)
 ====================================
 
+* Preliminary fixes for new QuickEdit using moo.fx (1549)
 * Only make RTE for chunks load if selected from dropdown (ie. stop it loading by default when RTE is selected in site config).
 * Remove the RTE code completely from mutate_templates.dynamic.php - causing problems when RTE is set as default in system config and strips out essential template code when used.
 * [FS#499] Blank config.inc.php PRIOR to installation no longer errors (1534)
